--- a/config.org
+++ b/config.org
@@ -130,7 +130,7 @@
 (use-package doom-themes
   :ensure t
   :config
-  (load-theme 'doom-moonlight t)
+  (load-theme 'doom-dracula t)
   (doom-themes-org-config))
 
 ;; hiding toolbar
@@ -504,6 +504,22 @@
 	  (vterm-send-return)))
     nil))
 ;; -------------------------
+#+end_src
+*** Rust
+#+begin_src elisp
+(defun toggle-mut ()
+  "Toggles the mutability of the variable defined on the current line"
+  (interactive)
+  (save-excursion
+    (back-to-indentation)
+    (forward-word)
+    (if (string= " mut" (buffer-substring (point) (+ (point) 4)))
+        (delete-region (point) (+ (point) 4))
+      (insert " mut"))))
+
+(add-hook 'rust-mode-hook
+		  (lambda ()
+			(local-set-key (kbd "C-c m") #'toggle-mut)))
 #+end_src
 *** Formatting
 #+begin_src elisp
