--- a/config.org
+++ b/config.org
@@ -281,6 +281,19 @@
 (add-hook 'js-mode-hook #'tree-sitter-hl-mode)
 ;; run org blocks
 (require 'ob-js)
+
+;; ---- HTML
+;; use C-j to expand
+(use-package emmet-mode
+  :ensure t
+  :hook
+  (web-mode . emmet-mode))
+;; Web Mode for better html editing
+(use-package web-mode
+  :ensure t
+  :config
+  (add-to-list 'auto-mode-alist '("\\.vue\\'" . web-mode))
+  (add-to-list 'auto-mode-alist '("\\.html?\\'" . web-mode)))
 #+end_src
 ** Nim
 #+begin_src elisp
